--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.drajer.ecr.receiver</groupId>
 	<artifactId>lambda</artifactId>
-	<version>1.0.2</version>
+	<version>1.0.3</version>
 	<packaging>jar</packaging>
 	<properties>
 	    <maven.compiler.target>17</maven.compiler.target>
 	    <maven.compiler.source>17</maven.compiler.source>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <jakson.databand.version>2.18.3</jakson.databand.version>
+	    <junit.version>4.13.2</junit.version>
+	    <commons.logging.version>1.3.5</commons.logging.version>
+	    <amazon.ion.java.version>1.11.10</amazon.ion.java.version>
+	    <amazon.sdk.version>2.18.2</amazon.sdk.version>
 	</properties>	
 	<build>
 		<plugins>
@@ -59,7 +64,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -78,19 +83,48 @@
 			<version>4.5.14</version>
 		</dependency>
 		
-<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-xray-recorder-sdk-core -->
 <dependency>
     <groupId>com.amazonaws</groupId>
     <artifactId>aws-xray-recorder-sdk-core</artifactId>
-    <version>2.18.2</version>
+    <version>${amazon.sdk.version}</version>   
 </dependency>
 
-<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-xray-recorder-sdk-aws-sdk -->
 <dependency>
     <groupId>com.amazonaws</groupId>
     <artifactId>aws-xray-recorder-sdk-aws-sdk</artifactId>
-    <version>2.18.2</version>
+    <version>${amazon.sdk.version}</version>
+	<exclusions>
+		<exclusion>
+    		<groupId>software.amazon.ion</groupId>
+    		<artifactId>ion-java</artifactId>
+    	</exclusion>
+	</exclusions>	    
 </dependency>
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>${jakson.databand.version}</version>
+</dependency>
+		
+<dependency>
+    <groupId>com.fasterxml.jackson.dataformat</groupId>
+    <artifactId>jackson-dataformat-cbor</artifactId>
+    <version>${jakson.databand.version}</version>
+</dependency>
+		
+<dependency>
+    <groupId>commons-logging</groupId>
+    <artifactId>commons-logging</artifactId>
+    <version>${commons.logging.version}</version>
+</dependency>
+
+<dependency>
+    <groupId>com.amazon.ion</groupId>
+    <artifactId>ion-java</artifactId>
+    <version>${amazon.ion.java.version}</version>
+</dependency>
+
 		
 	</dependencies>
 </project>
